<resources>
    <!-- Strings related to Main UI -->
    <string name="app_name">Android IoT Gateway</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_logout">Sign out</string>

    <!-- Strings related to Top Menu -->
    <string name="action_settings">Settings</string>
    <string name="action_logout">Log Out</string>
    <string name="action_scan">Scan</string>
    <string name="action_connect">Connect</string>
    <string name="action_subscribe">Subscribe</string>

    <!-- Strings related to login activity -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to content of main activity -->
    <string name="text_gateway">Gateway</string>
    <string name="text_database">Database</string>
    <string name="text_ble">Ble Scanner</string>
    <string name="text_cloud">Cloud</string>
    <string name="text_battery">Battery</string>
    <string name="text_settings">Settings</string>
    <string name="text_ok">Ok</string>
    <string name="text_cancel">Cancel</string>

    <!-- Strings related to content of bluetooth activity -->
    <string name="title_activity_bluetooth">Bluetooth Low Energy</string>
    <string name="title_activity_bluetooth_list">BLE Device</string>
    <string name="title_activity_bluetooth_characteristic">Characteristic</string>
    <string name="title_activity_bluetooth_rw">R/W Characteristic</string>
    <string name="title_select_bluetooth">Select BLE Device: </string>
    <string name="title_activity_settings">Settings</string>
    <string name="text_ble_devices">List of BLE devices: </string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_header_bluetooth">Bluetooth</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
