<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.uni.stuttgart.ipvs.androidgateway.MainActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:showIn="@layout/activity_main">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/linearLayoutVertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:weightSum="5"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/relativeLayoutVertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0">

            <ImageView
                android:id="@+id/imageViewGateway"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="42dp"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/gateway" />

            <TextView
                android:id="@+id/textViewGateway"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/imageViewGateway"
                android:layout_alignStart="@+id/imageViewGateway"
                android:layout_below="@+id/imageViewGateway"
                android:text="@string/text_gateway"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                tools:layout_editor_absoluteX="65dp"
                tools:layout_editor_absoluteY="156dp" />



            <ImageView
                android:id="@+id/imageViewDatabase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="44dp"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/database" />

            <TextView
                android:id="@+id/textViewDatabase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textViewGateway"
                android:layout_alignBottom="@+id/textViewGateway"
                android:layout_alignEnd="@+id/imageViewDatabase"
                android:layout_alignStart="@+id/imageViewDatabase"
                android:text="@string/text_database"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:textSize="15dp"/>

            <ImageView
                android:id="@+id/imageViewCloud"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/textViewDatabase"
                android:layout_below="@+id/textViewSpc2"
                app:srcCompat="@drawable/cloud" />

            <ImageView
                android:id="@+id/imageViewBluetooth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/textViewGateway"
                android:layout_below="@+id/textViewSpc1"
                app:srcCompat="@drawable/bluetooth" />

            <TextView
                android:id="@+id/textViewCloud"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/imageViewCloud"
                android:layout_alignStart="@+id/imageViewCloud"
                android:layout_below="@+id/imageViewCloud"
                android:text="@string/text_cloud"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:textSize="15dp"/>

            <ImageView
                android:id="@+id/imageViewBattery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewSpc4"
                android:layout_toEndOf="@+id/textViewSpc1"
                app:srcCompat="@drawable/battery" />

            <ImageView
                android:id="@+id/imageViewSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/textViewSpc4"
                android:layout_below="@+id/textViewSpc4"
                app:srcCompat="@drawable/setting" />

            <TextView
                android:id="@+id/textViewBattery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/imageViewBattery"
                android:layout_alignStart="@+id/imageViewBattery"
                android:layout_below="@+id/imageViewBattery"
                android:text="@string/text_battery"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:textSize="15dp"/>

            <TextView
                android:id="@+id/textViewSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/imageViewSettings"
                android:layout_alignStart="@+id/imageViewSettings"
                android:layout_below="@+id/imageViewSettings"
                android:contentDescription="@android:style/TextAppearance.DeviceDefault.Large"
                android:text="@string/text_settings"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:textSize="15dp"/>

            <TextView
                android:id="@+id/textViewSpc1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/textViewGateway"
                android:layout_below="@+id/textViewGateway" />

            <TextView
                android:id="@+id/textViewSpc2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/textViewSpc1"
                android:layout_alignStart="@+id/textViewDatabase" />

            <TextView
                android:id="@+id/textViewSpc3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/textViewSpc1" />

            <TextView
                android:id="@+id/textViewSpc4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/imageViewCloud"
                android:layout_below="@+id/textViewCloud" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/imageViewBluetooth"
                android:layout_below="@+id/imageViewBluetooth"
                android:layout_toEndOf="@+id/textViewSpc1"
                android:text="@string/title_activity_bluetooth_list"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:textSize="15dp"/>


        </RelativeLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
